# haskell-nix-flakes-starter

./: .gitignore  README.md  flake.nix  hie.yaml  starter.cabal
doc/: README.md
main/app/: app.hs
main/tests/: tests.hs
src/app/: AppMain.hs
src/lib/: Lib.hs
src/prim/: Prim.hs
src/tests/: TestsMain.hs
